--- a/style.css
+++ b/style.css
@@ -94,20 +94,6 @@ p {
   grid-area: aside;
 }
 
-.aside_items a::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 0;
-  height: 2px;
-  transition: all 0.5s;
-}
-
-.aside_toggle {
-  display: none;
-}
-
 .main {
   height: 100%;
   background-color: rgb(65, 117, 87);
@@ -149,16 +135,6 @@ p {
     background-color: #4e0c0c;
   }
 
-  .aside_items {
-    /* position: absolute;
-    top: 100%; */
-    /* left: 0 */
-    background-color: rgb(63, 46, 14);
-    width: 50vw;
-
-    transform: translateX(-100%);
-    transition: 0.3s ease all;
-  }
   .content {
     padding: 0;
     margin: 5%;
@@ -168,41 +144,9 @@ p {
     align-content: space-evenly;
   }
 
-  .aside_toggle {
-    display: flex;
-    flex-direction: column;
-    margin: 15px;
-  }
-
-  .aside_toggle span {
-    width: 30px;
-    height: 4px;
-    background: white;
-    margin-bottom: 5px;
-    border-radius: 2px;
-    transform-origin: 5px 0px;
-    transition: all 0.2s linear;
-  }
-
-  .close span {
-    transform: rotate(45deg) translate(0px, 0px);
-  }
-
-  .close span :nth-child(2) {
-    display: none;
-  }
-
-  .close span :nth-child(3) {
-    transform: rotate(-45deg) translate(-5px, 1px);
-  }
-
-  .open {
-    transform: translateX(0);
-  }
-
   .main {
     width: 100%;
-    background-color: #fff;
+    background-color: #941616;
     grid-area: main;
   }
   .footer {
